# helix-lending-dbt

./: .dockerignore  .gitignore  AI_LOG.md  AI_LOG_TEMPLATE.md  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  main.py  profiles.yml  progress.md  pyproject.toml
data/: data_dictionary.md
docs/: architecture.md  data_lineage.md  interview_debrief.md  operations_runbook.md  portfolio_case_study.md
infographics/: architecture.mmd  quality_snapshot.md
models/: sources.yml
models/marts/: dim_loans.sql  fact_payments.sql  loan_payment_summary.sql  schema.yml
models/staging/: stg_loans.sql  stg_payments.sql
notebooklm/: 01_source_pack.md  02_study_guide.md  03_interview_battle_cards.md  04_presenter_script.md  05_slide_speaker_notes.md  README.md  helix_lending_pipeline_walkthrough.pptx
output/metrics/: data_quality_report.json  run_metrics.json
output/parquet/: core_loans_clean.parquet  core_payments_clean.parquet  dim_loans.parquet  fact_payments.parquet  loan_payment_summary.parquet  raw_loans.parquet  raw_payments.parquet
reports/: data_quality_summary.md  modeling_decisions.md
scripts/: inspect_duckdb.sql  run_dbt.ps1  run_pipeline.ps1
src/helix_pipeline/: __init__.py  config.py  logging_utils.py  parsers.py  pipeline.py
tests/: test_parsers.py  test_pipeline_e2e.py
